infra/k8s/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: dumimerlusca/auth-service:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 3001
      targetPort: 3001
